First connection Front and JavaAPI

--- a/Back/Java/src/main/resources/application.properties
+++ b/Back/Java/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=HolaSpring
 server.port=8888
 logging.level.com.example=DEBUG
 logging.pattern.dateformat=hh:mm
+spring.thymeleaf.check-template-location=false
